# introduction-to-pyro-pyladies

./: .gitignore  Part 1 - Linear Modelling with Pyro - Empty Template.ipynb  Part 2 - Variational Autoencoder - Empty Template.ipynb  Part 2 - Variational Autoencoder - Full Example.ipynb  README.md  load_dependencies.sh  pyproject.toml  requirements.txt
assets/: media.csv  sales.csv
